# mobile_robot

mobile_robot_firmware/src/: CMakeLists.txt  lcm_sub.py  mbot.c  mbot.h  mbot_testing.c
mobile_robot_firmware/tests/: pico_motor_analyze.c  pico_pid.c
